# gildedrose-refactoring

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
gildedrose_refactoring/: __init__.py  __main__.py  gilded_rose.py  main.py
scripts/: clean.sh  done.sh  lint.sh  test.sh  upgrade_dependencies.sh
scripts/python_scripts/: upgrade_dependencies.py
tests/: __init__.py  test_gilded_rose.py  test_main.py  test_version.py
tests/fixtures/: gilded_items.json  testtext_fixture.py
